# ZJU-Charger

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  _config.yml  docker-compose.yml  formatter.sh  get_status.py  package.json  pnpm-lock.yaml  pyproject.toml  quick_query.py  requirements.txt  run_server.py  serve.sh  tests.sh  update.sh
.github/: .markdownlint.json  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  provider.md  question.md  station.md  station_error.md
.github/workflows/: deploy-docs.yml  markdown-check.yml  python-check.yml
data/: latest.json  stations.json
db/: __init__.py  client.py  pipeline.py  schema.sql  station_repo.py  usage_repo.py
ding/: bot.py  commands.py  webhook.py
docs/: 01-quick-start.md  02-web-deployment.md  03-server-deployment.md  04-fetcher.md  05-dingbot.md  06-script-shortcuts.md  07-sqlite-schema.md  07-supabase-schema.md  08-api.md  09-logfire-dashboard.md  10-migration.md  README.md  index.md  report_prompts_for_clarity.md
fetcher/: fetch.py  provider_base.py  provider_manager.py  station.py
fetcher/providers/: __init__.py  dlmm.py  else_provider.py  minium_neptune.py  neptune.py  neptune_junior.py  provider_base.py  scan.py
fetcher/providers/data/: else_stations.csv  neptune_junior_stations.csv  (+2 more)
script/: README.md
server/: api.py  background_fetcher.py  config.py  logfire_setup.py  logging_config.py  run_server.py  station_loader.py  storage.py  update_stations.py
tests/: test_db.py  test_neptune_provider.py  test_provider_manager.py
web/: index.html  script.js  style.css
